--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ html {
 body {
   margin: 0;
   font-family: Bebas Neue, sans-serif;
-  background: black;
-  color: white;
+  /* background: black;
+  color: white; */
 }
 
 h1 {
@@ -49,7 +49,8 @@ h1 {
 
 .image-container img {
   width: 100%;
-  margin-top: 5px;
+  margin-top: 10px;
+  border-radius: 15px;
 }
 
 /* Media Query: Large Smartphone */
